--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<main class="main">
-			<sketch-app width="30" height="30"></sketch-app>
+			<sketch-app width="100" height="100"></sketch-app>
 			<div class="controls">
 				<button id="paint">paint</button>
 				<button id="zoom">zoom</button>
@@ -17,6 +17,8 @@
 				<button id="erase">erase</button>
 				<input type="color" name="" id="color" />
 			</div>
+			<button id="fullScreen-js">Full Screen</button>
+			<button id="test">Test</button>
 		</main>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
