--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
 						</label>
 					</li>
 					<li class="tool">
+						<input autocomplete="off" type="radio" id="rect" name="tool" value="rect" class="tool_radio" />
+						<label for="rect" class="tool_label"> R </label>
+					</li>
+					<li class="tool">
+						<input autocomplete="off" type="radio" id="circle" name="tool" value="circle" class="tool_radio" />
+						<label for="circle" class="tool_label"> C </label>
+					</li>
+					<li class="tool">
 						<input autocomplete="off" type="radio" id="erase" name="tool" value="erase" class="tool_radio" />
 						<label for="erase" class="tool_label">
 							<i class="fa-solid fa-eraser"></i>
