--- a/index.html
+++ b/index.html
@@ -9,200 +9,54 @@
 	</head>
 	<body>
 		<main class="main">
-			<div class="leftTools">
-				<ul class="colors">
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr1" name="drone" value="#000000" class="clr_radio" checked />
-						<label for="clr1" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr2" name="drone" value="#1D2B53" class="clr_radio" />
-						<label for="clr2" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr3" name="drone" value="#7E2553" class="clr_radio" />
-						<label for="clr3" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr4" name="drone" value="#008751" class="clr_radio" />
-						<label for="clr4" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr5" name="drone" value="#AB5236" class="clr_radio" />
-						<label for="clr5" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr6" name="drone" value="#5F574F" class="clr_radio" />
-						<label for="clr6" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr7" name="drone" value="#C2C3C7" class="clr_radio" />
-						<label for="clr7" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr8" name="drone" value="#FFF1E8" class="clr_radio" />
-						<label for="clr8" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr9" name="drone" value="#FF004D" class="clr_radio" />
-						<label for="clr9" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr10" name="drone" value="#FFA300" class="clr_radio" />
-						<label for="clr10" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr11" name="drone" value="#FFEC27" class="clr_radio" />
-						<label for="clr11" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr12" name="drone" value="#00E436" class="clr_radio" />
-						<label for="clr12" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr13" name="drone" value="#29ADFF" class="clr_radio" />
-						<label for="clr13" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr14" name="drone" value="#83769C" class="clr_radio" />
-						<label for="clr14" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr15" name="drone" value="#FF77A8" class="clr_radio" />
-						<label for="clr15" class="clr_label"></label>
-					</li>
-					<li class="clr">
-						<input autocomplete="off" type="radio" id="clr16" name="drone" value="#FFCCAA" class="clr_radio" />
-						<label for="clr16" class="clr_label"></label>
-					</li>
-				</ul>
+			<div class="settings"></div>
+			<div class="tools" id="tools-js">
+				<div class="tool paint">
+					<input type="radio" class="tool_radio" name="tool" id="paint" value="paint" checked />
+					<label for="paint" class="tool_label"><img src="/assets/icons/tools/crayon.png" alt="paint" class="tool_img" /></label>
+				</div>
+				<div class="tool erase">
+					<input type="radio" class="tool_radio" name="tool" id="erase" value="erase" />
+					<label for="erase" class="tool_label"><img src="/assets/icons/tools/gomme.png" alt="erase" class="tool_img" /></label>
+				</div>
+				<div class="tool line">
+					<input type="radio" class="tool_radio" name="tool" id="line" value="line" />
+					<label for="line" class="tool_label"><img src="/assets/icons/tools/ligne.png" alt="line" class="tool_img" /></label>
+				</div>
+				<div class="tool rect">
+					<input type="radio" class="tool_radio" name="tool" id="rect" value="rect" />
+					<label for="rect" class="tool_label"><img src="/assets/icons/tools/rectangle.png" alt="rect" class="tool_img" /></label>
+				</div>
+				<div class="tool circle">
+					<input type="radio" class="tool_radio" name="tool" id="circle" value="circle" />
+					<label for="circle" class="tool_label"><img src="/assets/icons/tools/cercle.png" alt="circle" class="tool_img" /></label>
+				</div>
+				<div class="tool bucket">
+					<input type="radio" class="tool_radio" name="tool" id="bucket" value="bucket" />
+					<label for="bucket" class="tool_label"><img src="/assets/icons/tools/pot.png" alt="bucket" class="tool_img" /></label>
+				</div>
+				<div class="tool drag">
+					<input type="radio" class="tool_radio" name="tool" id="drag" value="drag" />
+					<label for="drag" class="tool_label"><img src="/assets/icons/tools/move.png" alt="drag" class="tool_img" /></label>
+				</div>
+				<div class="tool crop">
+					<input type="radio" class="tool_radio" name="tool" id="crop" value="crop" />
+					<label for="crop" class="tool_label"><img src="/assets/icons/tools/recadrer.png" alt="crop" class="tool_img" /></label>
+				</div>
+				<div class="tool zoom">
+					<input type="radio" class="tool_radio" name="tool" id="zoom" value="zoom" />
+					<label for="zoom" class="tool_label"><img src="/assets/icons/tools/zoom.png" alt="zoom" class="tool_img" /></label>
+				</div>
+				<div class="tool unzoom">
+					<input type="radio" class="tool_radio" name="tool" id="unzoom" value="unzoom" />
+					<label for="unzoom" class="tool_label"><img src="/assets/icons/tools/dezoom.png" alt="unzoom" class="tool_img" /></label>
+				</div>
+				<div class="tool handle">
+					<input type="radio" class="tool_radio" name="tool" id="handle" value="handle" />
+					<label for="handle" class="tool_label"><img src="/assets/icons/tools/handle.png" alt="handle" class="tool_img" /></label>
+				</div>
 			</div>
-			<sketch-app width="30" height="30"></sketch-app>
-			<div class="rightTools">
-				<ul class="size">
-					<li class="size">
-						<input autocomplete="off" type="radio" id="size1" name="size" value="1" checked class="size_radio" />
-						<label for="size1" class="size_label"></label>
-					</li>
-					<li class="size">
-						<input autocomplete="off" type="radio" id="size2" name="size" value="2" class="size_radio" />
-						<label for="size2" class="size_label"></label>
-					</li>
-					<li class="size">
-						<input autocomplete="off" type="radio" id="size3" name="size" value="3" class="size_radio" />
-						<label for="size3" class="size_label"></label>
-					</li>
-					<li class="size">
-						<input autocomplete="off" type="radio" id="size4" name="size" value="4" class="size_radio" />
-						<label for="size4" class="size_label"></label>
-					</li>
-					<li class="size">
-						<input autocomplete="off" type="radio" id="size5" name="size" value="5" class="size_radio" />
-						<label for="size5" class="size_label"></label>
-					</li>
-					<li class="size">
-						<input autocomplete="off" type="radio" id="size6" name="size" value="6" class="size_radio" />
-						<label for="size6" class="size_label"></label>
-					</li>
-				</ul>
-				<ul class="tools">
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="paint" name="tool" value="paint" checked class="tool_radio" />
-						<label for="paint" class="tool_label">
-							<i class="fa-solid fa-pen"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="line" name="tool" value="line" class="tool_radio" />
-						<label for="line" class="tool_label">
-							<i class="fa-solid fa-slash"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="rect" name="tool" value="rect" class="tool_radio" />
-						<label for="rect" class="tool_label"> R </label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="circle" name="tool" value="circle" class="tool_radio" />
-						<label for="circle" class="tool_label"> C </label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="erase" name="tool" value="erase" class="tool_radio" />
-						<label for="erase" class="tool_label">
-							<i class="fa-solid fa-eraser"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="bucket" name="tool" value="bucket" class="tool_radio" />
-						<label for="bucket" class="tool_label">
-							<i class="fa-solid fa-fill-drip"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="crop" name="tool" value="crop" class="tool_radio" />
-						<label for="crop" class="tool_label"> Cr </label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="zoom" name="tool" value="zoom" class="tool_radio" />
-						<label for="zoom" class="tool_label">
-							<i class="fa-solid fa-magnifying-glass-plus"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="unzoom" name="tool" value="unzoom" class="tool_radio" />
-						<label for="unzoom" class="tool_label">
-							<i class="fa-solid fa-magnifying-glass-minus"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="drag" name="tool" value="drag" class="tool_radio" />
-						<label for="drag" class="tool_label"> D </label>
-					</li>
-					<li class="tool">
-						<input autocomplete="off" type="radio" id="handle" name="tool" value="handle" class="tool_radio" />
-						<label for="handle" class="tool_label">
-							<i class="fa-solid fa-hand"></i>
-						</label>
-					</li>
-					<li class="tool">
-						<button id="resize" class="tool_label" value="resize">resize</button>
-					</li>
-					<li class="tool">
-						<button id="delete" class="tool_label" value="delete">
-							<i class="fa-solid fa-xmark"></i>
-						</button>
-					</li>
-					<li class="tool">
-						<button id="fitscreen" class="tool_label" value="fitscreen">
-							<i class="fa-solid fa-minimize"></i>
-						</button>
-					</li>
-				</ul>
-			</div>
-			<dialog class="resizeModal" id="resizeModal-js">
-				<form id="resizeForm-js">
-					<label for="vAlign">vertical align :</label>
-					<select name="vAlign" id="vAlign-js">
-						<option value="-1">top</option>
-						<option value="0">center</option>
-						<option value="1">bottom</option>
-					</select>
-					<label for="hAlign">horizontal align :</label>
-					<select name="hAlign" id="hAlign-js">
-						<option value="-1">left</option>
-						<option value="0">center</option>
-						<option value="1">right</option>
-					</select>
-					<label for="resize-width">width : </label>
-					<input type="number" name="width" id="resize-width" value="30" min="1" max="800" />
-					<label for="resize-height">height : </label>
-					<input type="number" name="height" id="resize-height" value="30" min="1" max="800" />
-					<div class="resizeModal_btns">
-						<button>ok</button>
-						<button type="button" id="cancelResize-js">cancel</button>
-					</div>
-				</form>
-			</dialog>
+			<sketch-app width="30" height="30" class="sketch"></sketch-app>
 		</main>
 		<script type="module" src="/src/main.ts"></script>
 	</body>
