--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
 				<!-- LAYERS -->
 				<div class="layers" id="layers-js">
 					<h4 class="layers_title">layers</h4>
-					<ul class="layers_list">
-						<li class="layers_item selected" data-id="1">Layer 1</li>
-					</ul>
+					<ul class="layers_list"></ul>
 					<div class="layers_control">
 						<button class="layers_btn" id="newLayer-js" helper="addLayer">+</button>
 						<button class="layers_btn" id="deleteLayer-js" helper="removeLayer">-</button>
@@ -130,6 +128,21 @@
 								</div>
 								<button class="modal__btn modal__btn-primary" id="resizeConfirm-js">Ok</button>
 							</form>
+						</main>
+					</div>
+				</div>
+			</div>
+
+			<!-- inactif click modal -->
+			<div class="modal micromodal-slide" id="inactifClick-modal" aria-hidden="true">
+				<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+					<div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="inactifClick-modal-title">
+						<header class="modal__header">
+							<h2 class="modal__title modal__title--error" id="inactifClick-modal-title" translate="activLayerNotVisible">Active layer inactiv</h2>
+							<button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+						</header>
+						<main class="modal__content" id="inactifClick-modal-content">
+							<p translate="inactiveClick">Activate it to be able to modify it</p>
 						</main>
 					</div>
 				</div>
