--- a/index.html
+++ b/index.html
@@ -58,33 +58,11 @@
 					/></label>
 				</div>
 				<!-- SIZES -->
-				<div class="sizes" id="sizes-js">
-					<input type="radio" name="size" id="1" value="1" class="sizes_radio" checked /><label
-						for="1"
-						class="sizes_label"
-						tooltip-text="Set size to 1px"
-						tooltip-right
-						><span></span></label
-					><input type="radio" name="size" id="2" value="2" class="sizes_radio" /><label
-						for="2"
-						class="sizes_label"
-						tooltip-text="Set size to 2px"
-						tooltip-right
-						><span></span></label
-					><input type="radio" name="size" id="3" value="3" class="sizes_radio" /><label
-						for="3"
-						class="sizes_label"
-						tooltip-text="Set size to 3px"
-						tooltip-right
-						><span></span></label
-					><input type="radio" name="size" id="4" value="4" class="sizes_radio" /><label
-						for="4"
-						class="sizes_label"
-						tooltip-text="Set size to 4px"
-						tooltip-right
-						><span></span
-					></label>
+				<div class="size" id="size-js">
+					<label for="sizepx" class="size_label">size : <i>1 px</i></label
+					><input type="range" name="sizepx" id="sizepx" class="size_input" min="1" max="16" value="1" />
 				</div>
+
 				<!-- COLORS -->
 				<button class="color" label="color" id="colorBtn-js" tooltip-text="Choose a color" tooltip-right></button>
 				<color-picker
@@ -92,6 +70,7 @@
 				></color-picker>
 			</div>
 			<sketch-app width="30" height="30" class="sketch"></sketch-app>
+
 			<div class="rightBlock">
 				<!-- ACTIONS -->
 				<div class="actions">
