history works git add * (I hope)

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 					pallet='["#000000","#1D2B53","#7E2553","#008751","#AB5236","#5F574F","#C2C3C7","#FFF1E8","#FF004D","#FFA300","#FFEC27","#00E436","#29ADFF","#83769C","#FF77A8","#FFCCAA"]'
 				></color-picker>
 			</div>
-			<sketch-app width="30" height="30" class="sketch"></sketch-app>
+			<sketch-app class="sketch"></sketch-app>
 
 			<div class="rightBlock">
 				<!-- ACTIONS -->
