--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<img src="/assets/icons/actions/resize.png" alt="resize" />
 					</button>
 					<button id="open" class="actions_btn" tooltip-text="open"><img src="/assets/icons/actions/ouvrir.png" alt="open" /></button>
-					<button id="save" class="actions_btn" tooltip-text="save"><img src="/assets/icons/actions/enregistrer.png" alt="save" /></button>
+					<!-- <button id="save" class="actions_btn" tooltip-text="save"><img src="/assets/icons/actions/enregistrer.png" alt="save" /></button> -->
 					<button id="download" class="actions_btn" tooltip-text="download"><img src="/assets/icons/actions/telecharger.png" alt="download" /></button>
 				</div>
 				<!-- LAYERS -->
@@ -167,6 +167,41 @@
 				</div>
 			</div>
 
+			<!-- download modal -->
+			<div class="modal micromodal-slide" id="download-modal" aria-hidden="true">
+				<div class="modal__overlay" tabindex="-1" data-micromodal-close>
+					<div class="modal__container" role="dialog" aria-modal="true" aria-labelledby="download-modal-title">
+						<header class="modal__header">
+							<h2 class="modal__title modal__title" id="download-modal-title" translate="download">Download</h2>
+							<button class="modal__close" aria-label="Close modal" data-micromodal-close></button>
+						</header>
+						<main class="modal__content" id="download-modal-content">
+							<form action="" class="downloadForm">
+								<fieldset class="file">
+									<label for="fileName-download">File name : </label>
+									<input type="text" name="fileName-download" id="fileName-download" value="awesome-drawing" class="downloadForm_input" required />
+									<select name="format-download" id="format-download" class="downloadForm_select">
+										<option value="png">.png</option>
+										<option value="gif">.gif</option>
+										<option value="json">.json</option>
+									</select>
+								</fieldset>
+								<fieldset class="scale">
+									<label for="scale-download">Scale :</label>
+									<input type="number" name="scale-download" id="scale-download" value="1" min="1" class="downloadForm_scale" required />
+								</fieldset>
+								<fieldset class="downloadForm_spritesheet">
+									<label for="columns-download">Columns :</label>
+									<input type="number" name="columns-download" id="columns-download" value="1" min="1" class="downloadForm_columns" required />
+									<label for="rows-download">Rows :</label>
+									<input type="number" name="rows-download" id="rows-download" value="1" min="1" class="downloadForm_rows" required />
+								</fieldset>
+								<button class="modal__btn modal__btn-primary">Download</button>
+							</form>
+						</main>
+					</div>
+				</div>
+			</div>
 			<!-- inactif click modal -->
 			<div class="modal micromodal-slide" id="inactifClick-modal" aria-hidden="true">
 				<div class="modal__overlay" tabindex="-1" data-micromodal-close>
