--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 			<sketch-app class="sketch"></sketch-app>
 
 			<div class="rightBlock">
-				<input type="file" id="file-selector" accept="image/png, application/JSON" />
+				<input type="file" id="file-selector" accept="application/JSON" />
 				<!-- ACTIONS -->
 				<div class="actions">
 					<button id="fit" class="actions_btn" tooltip-text="fit to screen size"><img src="/assets/icons/actions/adapter.png" alt="fit" /></button>
